Fix blue settings buttons alignments

--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -13,6 +13,7 @@
 	padding-top: 0;
 	padding-bottom: 0;
 	font-size: @berend-font-size-small;
+	line-height: @berend-button-height;
 }
 
 // Textual buttons
