--- a/styles/mixins.less
+++ b/styles/mixins.less
@@ -19,6 +19,7 @@
 	text-decoration: none;
 	padding-top: 0;
 	padding-bottom: 0;
+	font-weight: 600;
 	&:before {
 		vertical-align: top;
 		font-size: @berend-font-size-small;
