--- a/styles/thread.less
+++ b/styles/thread.less
@@ -211,6 +211,10 @@
 		margin-top: @berend-padding-medium;
 		margin-bottom: ~"calc( 50vh - " ( @berend-button-height / 2 ) ~" - " ( @berend-toolbar-height / 2 ) ~" )";
 		text-align: center;
+		// Thread reply button
+		.reply-text {
+			vertical-align: top;
+		}
 		.footer-reply-area {
 			#berend-mixin-button-reset;
 			#berend-mixin-button-blue;
